@@ -1,20 +1,23 @@
 package snackscription.subscription.controller;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import snackscription.subscription.dto.SubscriptionDTO;
 import snackscription.subscription.model.Subscription;
 import snackscription.subscription.service.SubscriptionService;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 class SubscriptionControllerTest {
 
@@ -24,68 +27,168 @@ class SubscriptionControllerTest {
     @InjectMocks
     private SubscriptionController subscriptionController;
 
-    public SubscriptionControllerTest() {
+    private SubscriptionDTO subscriptionDTO;
+    private Subscription subscription;
+
+    @BeforeEach
+    void setUp() {
         MockitoAnnotations.openMocks(this);
+
+        subscriptionDTO = new SubscriptionDTO();
+        subscriptionDTO.setId(UUID.randomUUID().toString());
+        subscriptionDTO.setType("MONTHLY");
+        subscriptionDTO.setUserId("user123");
+        subscriptionDTO.setSubscriptionBoxId("box123");
+        subscriptionDTO.setStatus("PENDING");
+
+        subscription = new Subscription();
+        subscription.setId(UUID.randomUUID().toString());
+        subscription.setType("MONTHLY");
+        subscription.setUserId("user123");
+        subscription.setSubscriptionBoxId("box123");
+        subscription.setStatus("PENDING");
     }
 
     @Test
     void testCreate() {
-        List<SubscriptionDTO> subscriptionDTOList = Collections.emptyList();
+        when(subscriptionService.save(any(SubscriptionDTO.class)))
+                .thenReturn(CompletableFuture.completedFuture(subscription));
 
-        when(subscriptionService.findAll()).thenReturn(subscriptionDTOList);
+        CompletableFuture<ResponseEntity<Subscription>> result = subscriptionController.create(subscriptionDTO);
 
-        ResponseEntity<List<SubscriptionDTO>> responseEntity = subscriptionController.findAll();
-
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals(subscriptionDTOList, responseEntity.getBody());
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.ok(subscription), result.join());
     }
 
     @Test
     void testFindAll() {
-        List<SubscriptionDTO> subscriptionDTOList = Collections.emptyList();
+        List<SubscriptionDTO> subscriptionDTOList = List.of(subscriptionDTO);
 
-        when(subscriptionService.findAll()).thenReturn(subscriptionDTOList);
+        when(subscriptionService.findAll())
+                .thenReturn(CompletableFuture.completedFuture(subscriptionDTOList));
 
-        ResponseEntity<List<SubscriptionDTO>> responseEntity = subscriptionController.findAll();
+        CompletableFuture<ResponseEntity<List<SubscriptionDTO>>> result = subscriptionController.findAll();
 
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals(subscriptionDTOList, responseEntity.getBody());
-    }
-
-    @Test
-    void testFindById() {
-        String id = "1";
-        SubscriptionDTO subscriptionDTO = new SubscriptionDTO();
-
-        when(subscriptionService.findById(id)).thenReturn(subscriptionDTO);
-
-        ResponseEntity<SubscriptionDTO> responseEntity = subscriptionController.findById(id);
-
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals(subscriptionDTO, responseEntity.getBody());
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.ok(subscriptionDTOList), result.join());
     }
 
     @Test
     void testUpdate() {
-        SubscriptionDTO subscriptionDTO = new SubscriptionDTO();
-        Subscription subscription = new Subscription();
+        when(subscriptionService.findById(subscriptionDTO.getId()))
+                .thenReturn(CompletableFuture.completedFuture(Optional.of(subscriptionDTO)));
+        when(subscriptionService.update(subscriptionDTO))
+                .thenReturn(CompletableFuture.completedFuture(subscription));
 
-        when(subscriptionService.update(any())).thenReturn(subscription);
+        CompletableFuture<ResponseEntity<Subscription>> result = subscriptionController.update(subscriptionDTO);
 
-        ResponseEntity<Subscription> responseEntity = subscriptionController.update(subscriptionDTO);
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.ok(subscription), result.join());
+    }
 
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals(subscription, responseEntity.getBody());
+    @Test
+    void testFindById() {
+        when(subscriptionService.findById(subscriptionDTO.getId()))
+                .thenReturn(CompletableFuture.completedFuture(Optional.of(subscriptionDTO)));
+
+        CompletableFuture<ResponseEntity<SubscriptionDTO>> result = subscriptionController.findById(subscriptionDTO.getId());
+
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.ok(subscriptionDTO), result.join());
+    }
+
+    @Test
+    void testFindByIdInvalidId() {
+        String invalidId = "invalid_id";
+
+        CompletableFuture<ResponseEntity<SubscriptionDTO>> result = subscriptionController.findById(invalidId);
+
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.badRequest().build(), result.join());
     }
 
     @Test
     void testDelete() {
-        String id = "1";
+        when(subscriptionService.delete(subscriptionDTO.getId()))
+                .thenReturn(CompletableFuture.completedFuture(null));
 
-        ResponseEntity<String> responseEntity = subscriptionController.delete(id);
+        CompletableFuture<ResponseEntity<String>> result = subscriptionController.delete(subscriptionDTO.getId());
 
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals("DELETE SUCCESS", responseEntity.getBody());
-        verify(subscriptionService, times(1)).delete(id);
+        assertNotNull(result);
+        assertTrue(result.isDone());
+        assertEquals(ResponseEntity.ok("DELETE SUCCESS"), result.join());
+    }
+
+    @Test
+    void testUpdate_InvalidId() {
+        SubscriptionDTO invalidSubscriptionDTO = new SubscriptionDTO();
+        CompletableFuture<ResponseEntity<Subscription>> expectedResult = CompletableFuture.completedFuture(ResponseEntity.badRequest().build());
+
+        CompletableFuture<ResponseEntity<Subscription>> result = subscriptionController.update(invalidSubscriptionDTO);
+
+        assertTrue(result.isDone());
+        assertEquals(expectedResult.join(), result.join());
+    }
+
+    @Test
+    void testUpdate_SubscriptionNotFound() {
+        SubscriptionDTO invalidSubscriptionDTO = new SubscriptionDTO();
+        invalidSubscriptionDTO.setId(UUID.randomUUID().toString());
+        CompletableFuture<ResponseEntity<Subscription>> expectedResult = CompletableFuture.completedFuture(ResponseEntity.notFound().build());
+
+        when(subscriptionService.findById(invalidSubscriptionDTO.getId())).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
+
+        CompletableFuture<ResponseEntity<Subscription>> result = subscriptionController.update(invalidSubscriptionDTO);
+
+        assertTrue(result.isDone());
+        assertEquals(expectedResult.join(), result.join());
+    }
+
+    @Test
+    void testDelete_InvalidId() {
+        CompletableFuture<ResponseEntity<String>> expectedResult = CompletableFuture.completedFuture(ResponseEntity.badRequest().build());
+
+        CompletableFuture<ResponseEntity<String>> result = subscriptionController.delete("invalid_id");
+
+        assertTrue(result.isDone());
+        assertEquals(expectedResult.join(), result.join());
+    }
+
+    @Test
+    void testDelete_SubscriptionNotFound() {
+        String invalidId = UUID.randomUUID().toString();
+        CompletableFuture<ResponseEntity<String>> expectedResult = CompletableFuture.completedFuture(ResponseEntity.notFound().build());
+
+        when(subscriptionService.delete(invalidId)).thenReturn(CompletableFuture.failedFuture(new IllegalArgumentException()));
+
+        CompletableFuture<ResponseEntity<String>> result = subscriptionController.delete(invalidId);
+
+        assertTrue(result.isDone());
+        assertEquals(expectedResult.join(), result.join());
+    }
+
+    @Test
+    void testMain() {
+        ResponseEntity<String> response = subscriptionController.main();
+        assertEquals("Snackscription - Subscription Management API", response.getBody());
+    }
+
+    @Test
+    void testCreateExceptionHandler() {
+        SubscriptionDTO invalidSubscriptionDTO = new SubscriptionDTO();
+        CompletableFuture<ResponseEntity<Subscription>> expectedResult = CompletableFuture.completedFuture(ResponseEntity.badRequest().build());
+
+        CompletableFuture<Subscription> failedFuture = CompletableFuture.failedFuture(new IllegalArgumentException("Invalid Request"));
+        when(subscriptionService.save(invalidSubscriptionDTO)).thenReturn(failedFuture);
+
+        CompletableFuture<ResponseEntity<Subscription>> result = subscriptionController.create(invalidSubscriptionDTO);
+
+        assertTrue(result.isDone());
+        assertEquals(expectedResult.join(), result.join());
     }
 }
